--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "onlinegamesb - Free Online & Offline Games",
-  "short_name": "OnlineGamesB",
-  "description": "Play free online and offline games with friends. Enjoy fun mini games and the best free games collection for kids and adults on OnlineGamesB.",
+  "name": "onlinegamesbd - Free Online & Offline Games",
+  "short_name": "OnlineGamesBD",
+  "description": "Play free online and offline games with friends. Enjoy fun mini games and the best free games collection for kids and adults on OnlineGamesBD.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
